--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "MongoDB database adapter for livedb",
   "main": "mongo.js",
   "dependencies": {
-    "mongoskin": "~0.5",
-    "async": "~0.2.9"
+    "async": "^0.9.0",
+    "mongoskin": "^1.4.4"
   },
   "devDependencies": {
     "mocha": "~1",
